--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -1,326 +1,83 @@
-/*=FLATDOC THEME values------------------------------------------------*/
-/*--------------------------------------------------------------------*/
-/*=ENJOY-MONDAYS CONSTANTS--------------------------------------------*/
-/*--------------------------------------------------------------------*/
-/*=COLORS--------------------------------------------------*/
-/* define any new colors here */
-/*=COLOR COMBOS--------------------------*/
-/* add combinations of colors here */
-/* general_bg -*- right_code_bg -*- general_text -*- links_text -*- details (as hover) -*- left_code_bg */
-/* combo 1: $LIGHT_GRAY, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $LIGHT_WHITE */
-/* combo 2: $DARK_GRAY, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $BLACK */
-/* combo 3: $DARK_BLUE, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA */
-/* combo 4: $FUXSIA, $ZENBURN_BG, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $ZENBURN_BG */
-/* combo 1: $LIGHTER_WHITE, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $LIGHT_WHITE */
-/* sass lists: http://hugogiraudel.com/2013/07/15/understanding-sass-lists/ */
-/*=FONTS---------------------------------------------------*/
-/* define any new fonts here */
-/* fontweights, add/redefine here */
-/*=ENJOY-MONDAYS PATTERN VARIABLES--------------------------*/
-/* assigned (manually) to body as id, used to make sure these css rules override flatdoc style.css rules */
-/*=COLOR COMBOS--------------------------*/
-/* set color combinations here */
-/* GENERAL CONTENT BACKGROUND: */
-/* CODE IN BOX BACKGROUND: */
-/* CODE IN TEXT BACKGROUND */
-/* TEXT */
-/* GENERAL TEXT */
-/* LINKS */
-/* DETAILS (hovers, visited links) */
-/*=FONT FAMILIES-------------------------*/
-/* change font families here */
-/* links and text */
-/* headers */
-/*=FONT SIZES---------------------------*/
-/* change font sizes here */
-/* text, p */
-/* text, pre */
-/* side menu links */
-/* h1 */
-/*=FONT WEIGHTS-------------------------*/
-/* change font weights here */
-/*=VARIABLES, FUNCTIONS AND MIXINS----------------------------*/
-/*=HEADER VARIABLES--------*/
-/* change base header heights here, now same as flatdoc theme */
-/* header under 350px varies */
-/*=LINKS VARIABLES---------*/
-/* add any new hover effects here and either modify mixin or make new one */
-/* hover effects */
-/*=FOOTER VARIABLES---------*/
-/*=CLASSES-------------------------------------------------*/
-.clearfix {
-  clear: both; }
+/*
+Error: Undefined variable: "$combo".
+        on line 36 of css/sass/partials/_colors.scss
+        from line 2 of css/sass/style.scss
 
-.fixed {
-  position: fixed;
-  z-index: 1000; }
+31: $links_border_left: 3px solid $color_3;
+32: 
+33: 
+34: /* hover effects *\/
+35: 
+36: @mixin underline_link { 
+37:   border-bottom: $links_border_bottom; 
+38: }
+39: 
+40: @mixin colored_link {
+41:   border-bottom: none;
 
-.fullwidth {
-  width: 100%; }
-
-.screan-reader-text {
-  position: absolute;
-  height: 0;
-  width: 0;
-  opacity: 0;
-  font-size: 0; }
-
-.hidden {
-  display: none; }
-
-.top0 {
-  top: 0; }
-
-/*--------------------------------------------------------------------*/
-/*=ENJOY-MONDAYS CSS--------------------------------------------------*/
-/*--------------------------------------------------------------------*/
-/*=DEFAULTS---------------------*/
-body#enjoy-mondays {
-  font-family: "Lato", sans-serif;
-  font-weight: 100;
-  color: #4a4a4a;
-  background-color: #E9E8E3; }
-
-/* left menu and central content background need re-stating */
-#enjoy-mondays .content-root,
-#enjoy-mondays .menubar,
-#enjoy-mondays .content {
-  background-color: #E9E8E3; }
-
-/*=LINKS-----------------------*/
-/* ALL links */
-#enjoy-mondays a {
-  text-decoration: none;
-  font-size: 1em;
-  color: #3A3A3A;
-  font-weight: 900; }
-  #enjoy-mondays a:hover, #enjoy-mondays a.active {
-    border-bottom: 3px solid #DF3F54; }
-    #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
-      /* remove dash from links FLATDOC OVERRIDE */
-      background: none; }
-
-/* SIDE MENU links */
-#enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
-  margin-left: -3px;
-  border-left: 3px solid #DF3F54;
-  border-bottom: none;
-  color: #DF3F54; }
-
-/* make room for border-left as some flatdoc level-x links don't have */
-#enjoy-mondays .menu .level-2 > a {
-  padding-left: 3px; }
-
-/*=HEADERS--------------------*/
-#enjoy-mondays h1,
-#enjoy-mondays h2,
-#enjoy-mondays h3,
-#enjoy-mondays h4,
-#enjoy-mondays h5,
-#enjoy-mondays h6 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h1 {
-  font-size: 2.5em;
-  text-transform: uppercase; }
-
-/*=NAV HEADER------------------*/
-#enjoy-mondays #main-header {
-  background-color: #E9E8E3; }
-  #enjoy-mondays #main-header .left {
-    position: relative;
-    left: 220px; }
-
-#enjoy-mondays #fixed-header-aux {
-  height: 51px; }
-
-/*=CONTENT--------------------*/
-#enjoy-mondays p {
-  font-size: 1.25em;
-  background-color: #E9E8E3; }
-#enjoy-mondays pre {
-  font-size: 1.15em; }
-#enjoy-mondays code {
-  background-color: #F3F6FB; }
-#enjoy-mondays .content hr {
-  border: 0;
-  height: 3px;
-  width: 18%;
-  margin: 0 auto 3%;
-  clear: both; }
-#enjoy-mondays ul, #enjoy-mondays ol {
-  background-color: #E9E8E3; }
-
-/*=HIGHLIGHT JS OVERRIDE-----*/
-#enjoy-mondays .hljs, #enjoy-mondays pre > code {
-  background-color: #3F3F3F; }
-#enjoy-mondays pre > code {
-  border-color: #3F3F3F; }
-
-/*=LOGO FOOTER---------------*/
-#enjoy-mondays #logo-footer {
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
-  width: 28px;
-  height: auto; }
-  #enjoy-mondays #logo-footer img {
-    width: 100%; }
-
-/*=---------------------------------------------------------------*/
-/*=3 COLUMN BACKGROUND for big layout-----------------------------*/
-/*=---------------------------------------------------------------*/
-@media (min-width: 1180px) {
-  #enjoy-mondays .content-root {
-    background-color: #3F3F3F; }
-  #enjoy-mondays .content {
-    width: 100%;
-    padding-top: 0;
-    padding-bottom: 0;
-    background-color: #3F3F3F; }
-    #enjoy-mondays .content h1, #enjoy-mondays .content h2, #enjoy-mondays .content h3, #enjoy-mondays .content h4, #enjoy-mondays .content h5, #enjoy-mondays .content h6 {
-      width: 550px;
-      margin: 0;
-      padding-left: 40px;
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content h1:first-child {
-      padding-top: 30px; }
-    #enjoy-mondays .content ul, #enjoy-mondays .content ol {
-      margin-left: 0;
-      padding-left: 60px !important;
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content p {
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content pre {
-      width: calc(100% - 550px); }
-  #enjoy-mondays .content > *:last-child {
-    padding-bottom: 40px; } }
-/*=---------------------------------------------------------------*/
-/*=STYLE HEADER AND CONTENT media queries-------------------------*/
-/*=---------------------------------------------------------------*/
-/*=----------------------------------------------------UNDER 900px*/
-@media (max-width: 900px) {
-  /*=GITHUB BUTTONS = stack un 2 rows-------------*/
-  #enjoy-mondays #main-header .right {
-    width: 168px;
-    top: 3px; } }
-/*=----------------------------------------------------UNDER 767px*/
-/* (when side menu drops out) */
-@media (max-width: 767px) {
-  /*=HEADER title and menu = move to left---------*/
-  #enjoy-mondays #main-header .left {
-    left: 0; }
-
-  /*=CONTENT = centered content-------------------*/
-  .content {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%; } }
-/*=----------------------------------------------------UNDER 650px*/
-@media (max-width: 650px) {
-  /*=HEADER title and menu = fullwidth-----------*/
-  #enjoy-mondays #main-header {
-    padding-left: 0;
-    padding-right: 0;
-    /*=GITHUB BUTTONS = hide----*/ }
-    #enjoy-mondays #main-header .left {
-      float: none; }
-      #enjoy-mondays #main-header .left h1 {
-        margin-left: 30px;
-        float: left; }
-      #enjoy-mondays #main-header .left ul {
-        float: right;
-        margin-right: 30px; }
-        #enjoy-mondays #main-header .left ul li {
-          float: left; }
-      #enjoy-mondays #main-header .left li:last-child a {
-        padding-right: 0; }
-    #enjoy-mondays #main-header .right {
-      display: none; } }
-/*=----------------------------------------------------UNDER 480px*/
-@media (max-width: 480px) {
-  #enjoy-mondays #main-header .left li {
-    margin-left: 20px; } }
-/*=----------------------------------------------------UNDER 350px*/
-@media (max-width: 350px) {
-  /*=HEADER title and menu = stack in 2 rows----*/
-  #enjoy-mondays #main-header {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    height: 70px; }
-    #enjoy-mondays #main-header .left h1 {
-      float: none;
-      margin: 10px auto 12px auto; }
-    #enjoy-mondays #main-header .left ul {
-      float: none;
-      display: inline-block; }
-
-  #enjoy-mondays #fixed-header-aux {
-    height: 71px; } }
-/*=---------------------------------------------------------------*/
-/*=COLOR SWAPPER TEST (only over 767px)---------------------------*/
-/*=---------------------------------------------------------------*/
-#color-swapper {
-  display: none; }
-
-@media (min-width: 767px) {
-  #color-swapper {
-    display: initial;
-    left: 0;
-    padding: 5px; }
-    #color-swapper tr {
-      height: 15px;
-      overflow: hidden; }
-      #color-swapper tr:hover {
-        height: 12px;
-        cursor: pointer; }
-    #color-swapper td {
-      font-size: 0;
-      line-height: 0;
-      width: 27px; }
-      #color-swapper td a {
-        width: 27px;
-        height: 12px;
-        display: block; }
-
-  /*=COLOR OPTIONS-----------*/
-  #color-swapper td {
-    border-right: 1px solid white; }
-    #color-swapper td.GRAY {
-      background-color: #4a4a4a; }
-    #color-swapper td.LIGHT_GRAY {
-      background-color: #E9E8E3; }
-    #color-swapper td.DARK_GRAY {
-      background-color: #3A3A3A; }
-    #color-swapper td.DARK_BLUE {
-      background-color: #363B48; }
-    #color-swapper td.FUXSIA {
-      background-color: #DF3F54; }
-    #color-swapper td.LIGHT_FUXSIA {
-      background-color: #F17C71; }
-    #color-swapper td.ZENBURN_BG {
-      background-color: #3F3F3F; }
-    #color-swapper td.LIGHT_WHITE {
-      background-color: #F3F6FB; }
-    #color-swapper td.LIGHTER_WHITE {
-      background-color: #F8F8F4; } }
-/*=---------------------------------------------------------------*/
-/*=HIDE SCROLLBAR-------------------------------------------------*/
-/*=---------------------------------------------------------------*/
-/* testing if needed, check motzilla affects height of pre elements, check */
-/* @media (max-width: 1180px) {
-  #enjoy-mondays .content pre > code::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-  }
-  }*/
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+css/sass/partials/_colors.scss:36
+css/sass/style.scss:2
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/variable.rb:49:in `_perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:170:in `perform_arg'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `block in _perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each_with_index'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `_perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:468:in `visit_variable'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `block in with_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `with_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined variable: \"$combo\".\A         on line 36 of css/sass/partials/_colors.scss\A         from line 2 of css/sass/style.scss\A \A 31: $links_border_left: 3px solid $color_3;\A 32: \A 33: \A 34: /* hover effects */\A 35: \A 36: @mixin underline_link { \A 37:   border-bottom: $links_border_bottom; \A 38: }\A 39: \A 40: @mixin colored_link {\A 41:   border-bottom: none;"; }
